--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,9 @@
   <meta name="description"
     content="Hyper is a feature-rich dashboard and admin template that offers a vast collection of UI elements, components, widgets, and pages to help you build web applications quickly and efficiently. Its clean and adaptable layout is fully customizable, making it the ideal choice for developers and designers who want to save time and create high-quality solutions for their clients. Whether you’re building custom admin panels, dashboards, CRMs, CMSs, e-commerce panels, or other types of web applications, Hyper has got you covered." />
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAbvyBxmMbFhrzP9Z8moyYr6dCr-pzjhBE"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
   <style>
     #splash-screen {
       position: fixed;
